<resources>
    <string name="app_name">Shopping</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="password_name">Password</string>
    <string name="register_name">Name</string>
    <string name="register_mobilenumber">MobileNumber</string>
    <string name="verify_mobilenumber">Verify MobileNumber</string>
    <string name="about">About</string>
    <string name="change_password">Change Password</string>
    <string name="other_details">Other Details</string>
    <string name="bio_data">Add a couple of words about you are.</string>
    <string name="resend_otp">resend Otp</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="location">Location</string>
    <string name="otp">Enter otp</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="email">Email </string>
    <string name="email_id">Email Id</string>
    <string name="occupation">Occupation</string>
    <string name="website">Website</string>
    <string name="Location">Location</string>
    <string name="facebook">FaceBook</string>
    <string name="personal_details">Personal Details</string>
    <string name="add_occupation">Add Occupation</string>
    <string name="social_networks">Social Networks</string>
    <string name="defined_Website">No website </string>
    <string name="location_description">Share your location where you are.</string>
    <string name="add_address">Add Address</string>
    <string name="no_pincode_found">No Pincode found</string>
    <string name="defined_facebook_id">No facebook Id</string>
    <string name="defined_pinterest_id">No Pinterest Id</string>
    <string name="defined_twitter_id">No Twitter Id</string>
    <string name="defined_instagram_id">No Instagram Id</string>
    <string name="defined_youtube_id">No Youtube Id</string>
    <string name="address">Address</string>
    <string name="text_location">Add location..</string>
    <string name="pinterest">Pinterest</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="pincode">Pincode</string>
    <string name="youtube">Youtube</string>
    <string name="new_password">New Password</string>
    <string name="reenter_password">Re-Enter Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="forgot_password">Continue</string>
    <string name="otp_verify">Continue</string>
    <string name="save_changes">Save Changes</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="country_code">+91</string>
    <string name="forgot_password_button">forgot password?</string>
    <string name="register_button">Not a Member? Register Now!</string>
    <string name="login_button">Already Member Login!</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password_title">ForgotPassword</string>
    <string name="profile">Profile</string>
    <string name="profile_update">EditProfile</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="logout">Logout</string>
    <string name="retry">retry</string>
    <string name="please_check_internet_connection_and_try_again">please check internet connection and try again</string>
    <string name="app_id">1356322927904057</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Home</string>
    <string name="nav_header_subtitle">Homepage</string>
    <string name="Home">Home</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="today_deal">Today Deals</string>
    <string name="welcome1">Hello!</string>
    <string name="daily_essentials">Daily Essentials</string>
    <string name="home_needs">Home Needs</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="Rs">\u20B9</string>
    <string name="search">Search</string>
    <string-array name="query_suggestions">
        <item>household</item>
        <item>furniture</item>
        <item>grocery</item>
        <item>tops</item>
    </string-array>

</resources>
