<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn= "navigation_view">
    <group android:checkableBehavior="single"/>
    <item android:id="@+id/nav_Home"
        android:title="@string/Home" />
    <item android:id="@+id/nav_shop_by_category"
        android:title="@string/shop_by_category" />
    <item android:id="@+id/nav_deal"
        android:title="@string/today_deal" />
    <item android:title="">
        <menu>
            <item
                android:id= "@+id/nav_orders"
                android:title= "Your Orders" />
            <item
                android:id= "@+id/nav_buy_again"
                android:title= "Buy Again" />
            <item
                android:id= "@+id/nav_wish_list"
                android:title= "Your Wish List" />

        </menu>
    </item>
    <item android:title="">
        <menu>
            <item
                android:id= "@+id/nav_language"
                android:title= "Language" />
            <item
                android:id= "@+id/nav_notifications"
                android:title= "Your Notifications" />
            <item
                android:id= "@+id/navigation_settings"
                android:title= "Settings" />
            <item
                android:id= "@+id/nav_customer_services"
                android:title= "Customer Service" />


        </menu>
    </item>






</menu>